CLASSES-2767 Support column reordering without a full page load

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/pages/GradebookPage.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/pages/GradebookPage.html
@@ -10,6 +10,9 @@
     <div id="gbConnectionTimeoutFeedback" class="messageWarning" style="display:none;">
         <wicket:message key="feedback.connectiontimeout" />
     </div>
+    <div id="gbReorderColumnsFailed" class="messageWarning" style="display:none;">
+        <wicket:message key="feedback.reordercolumnsfailed" />
+    </div>
 
     <div class="row">
         <div class="col-sm-12">
