CLASSES-2798 allow the toolbar buttons to wrap and still be clicky

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/pages/GradebookPage.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/pages/GradebookPage.html
@@ -37,7 +37,7 @@
 	<div wicket:id="updateCourseGradeDisplayWindow" />
 	<div wicket:id="sortGradeItemsWindow" />
 
-    <div wicket:id="toolbar" id="gradebookGradesToolbar">
+    <div wicket:id="toolbar" id="gradebookGradesToolbar" class="btn-toolbar">
       <ul class="gb-toolbar-left">
         <li>
             <label for="studentFilterInput" class="sr-only"><wicket:message key="filter.students"/></label>
