--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/pages/GradebookPage.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/pages/GradebookPage.html
@@ -53,8 +53,13 @@
     <div wicket:id="toolbar" id="gradebookGradesToolbar" class="btn-toolbar">
       <ul class="gb-toolbar-left">
         <li>
-            <label for="studentFilterInput" class="sr-only"><wicket:message key="filter.students"/></label>
-            <input type="text" id="studentFilterInput" class="form-control" aria-controls="gradeTable" wicket:message="placeholder:filter.students" accesskey="f">
+            <div class="gb-student-filter">
+                <label for="studentFilterInput" class="sr-only"><wicket:message key="filter.students"/></label>
+                <input type="text" id="studentFilterInput" class="form-control" aria-controls="gradeTable" wicket:message="placeholder:filter.students" accesskey="f">
+                <a class="gb-student-filter-clear-button" wicket:message="title:filter.studentsclear" href="javascript:void(0)">
+                    <i class="fa fa-times-circle" aria-hidden="true"></i>
+                </a>
+            </div>
         </li>
         <wicket:enclosure>
             <li><span wicket:id="groupFilterOnlyOne" class="gb-group-title" role="status">Section 001</span></li>
